# xia-core

./: .gcc-flags.json  .gitignore  .gitmodules  .travis.yml  Android.mk  ControllerProgram  Makefile  README-XCOMPILE  README.SCION-XIA.md  README.md  README.xia  RouterConfigProgram  SCIONXIA.topo  TD1  arada-deploy.sh  arada-install.sh  cleanConfig  click  configure  g.sh  get_it_working_on_geni.patch  interdomain_routing_test.sh  intradomain_routing_test.sh  migrate_fixes.patch  scion_test.sh  start.sh  test.sh  test_distributed.sh  test_pcb.sh  test_scion.sh  tmuxinator.yml  tools.install  travis.yml  xia.patch  xia.sublime-project
DNS/: demo_setup.sh  readme.txt
XIASocket/: README
android-deps/: Android.mk  config.h  config_patch.diff  elements_modifier.py  elements_patch.diff  elements_patch1.diff  prepare.sh
api/: Android.mk  Makefile
applications/: Makefile
arada/: Makefile
click/: .gitignore  LINUXMODULE_COMPILE_TROUBLESHOOT  Makefile.in  XIA_INTEGRATION  click-buildtool.in  config.h.in  configure  configure.in  installch  load_kernel_click.sh  tags  testCache.sh
click-2.0/: .gitignore  LINUXMODULE_COMPILE_TROUBLESHOOT  README_XIA  click-buildtool.in  conf_kernel_click.sh  conf_user_click.sh  conf_user_click_nomt.sh  config-linuxmodule.h.in  configure  configure.in  load_kernel_click.sh  load_user_click.sh  performace-eval-modification  test.sh
click-2.0.1/: .gitignore  Android.mk  Makefile  Makefile.in  SCION_INSTALL  click-buildtool  click-buildtool.in  click-compile  conf_kernel_click.sh  conf_user_click.sh  conf_user_click_nomt.sh  conf_xia  config.h.in  config.mk  config.status  configure  configure.in  scioncryptolib.patch
client_mobility/: output_client  output_server  plot-mobility.gnuplot  plot-mobility2.gnuplot  plot.gnuplot  plot.py
daemons/: Android.mk  Makefile
dagaddr/: .gitignore  README
dagaddr/cpp/: .gitignore  CMakeLists.txt  Doxyfile.in  dagaddr.cpp  dagaddr.hpp  test.cpp  utils.cpp
doc/: Makefile  README  api.cfg  notfound.html  xdocs  xiaman
docs/: README_SCION.txt  SCION-backgraound-oct30th.pptx
etc/: .gitignore  controller0_sid.ini  controller1_sid.ini  xids  (+12 more)
(+4138 files in other folders)
